# extlib

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  configure.ac  extlib.pc.in  test.c
doc/: cap.3  concat_str.3  fcopy.3  join_str.3  max.3  memset_s.3  memvcmp.3  min.3  replace_str.3  rrmdir.3  strfmt.3  strlwr.3  strupr.3  trim.3
src/: Makefile.am  constraint_handler.c  extlib.c  extlib.h  extstring.c  memset_s.c
tests/: Makefile  driver.c  test.c  test_concat_str.c  test_driver.h  test_fcopy.c  test_join_str.c  test_malloc_free_secure.c  test_memset_s.c  test_min_max_cap.c  test_replace_str.c  test_strfmt.c  test_strlwr_strupr.c  test_trim.c  tests.c
